--- a/Trees/Decision_Tree.Rmd
+++ b/Trees/Decision_Tree.Rmd
@@ -2,9 +2,9 @@
 
 
 ```{r}
-set.seed(22)
+set.seed(6164900)
 Y <- rnorm(100)
-X <- cbind(Y + rnorm(100,0, 1.5), rnorm(100))
+X <- scale(cbind(Y + rnorm(100,0, 1.5), rnorm(100)))
 df <- cbind(Y,X)
 ```
 Very easily said, in regression, a decision tree assigns to every observation a mean outcome conditional on some value in the predictor space. 
@@ -18,9 +18,9 @@ For example, one arbitrary, way of splitting the regions would be like this:
 
 ```{r}
 plot(X[,1], X[,2])
-abline(v = -2, col = 'red')
-lines(-2:7, rep(-0.5, 10), col = 'blue')
-text(c(-3.5,2,2), c(0,1, -1.5), sprintf("R%d", 1:3), col = "brown")
+abline(v = -1, col = 'red')
+lines(-1:4, rep(-0.6, 6), col = 'blue')
+text(c(-2,1,1), c(0,1, -1.5), sprintf("R%d", 1:3), col = "brown")
 
 ```
 
@@ -37,7 +37,7 @@ Let's take a look at an example of binary recursive splitting where we have 2 pr
 plot(X[,1], X[,2])
 abline(v = mean(X[,1]), col = 'red')
 abline(h = mean(X[,2]), col = 'blue')
-text(c(-3,4,-3,4), c(1,1,-1,-1), sprintf("R%d", 1:4), col = "brown")
+text(c(-1.5,1.5,-1.5,1.5), c(1.2,1.2,-1.2,-1.2), sprintf("R%d", 1:4), col = "brown")
 
 
 ```
@@ -67,11 +67,11 @@ And we can see that the split based on the mean of X1 gives a lower RSS and thus
 Lets check how much it does better than when we just assign everyone the mean outcome value of the entire dataset, called the null model.
 ```{r}
 RSS0 <- sum((df[,1] - mean(df[,1]))^2)
-RSS0 - RSSX1 #RSS decreases with 57.2 units if we split on X1
-(RSSX1-RSS0)/RSS0 * 100 #59.5% decrease
+RSS0 - RSSX1 #RSS decreases with 61.9 units if we split on X1
+(RSSX1-RSS0)/RSS0 * 100 #61.2% decrease
 
 ```
-We see that the RSS decreases with 59.5% if would we split the dataset based on the mean of X1 than if we dont split the dataset at all. Everyone on the lower end of X1 gets a predicted value of $\hat{y}_i = E(Y| X1 < \mu_{X1})$, and everyone on the higher end of X1 gets a predicted value of $\hat{y}_i = E(Y| X1 > \mu_{X1})$. And this would do better than if everyone got $\hat{y}_i = E(Y)$
+We see that the RSS decreases with 61.2% if would we split the dataset based on the mean of X1 than if we dont split the dataset at all. Everyone on the lower end of X1 gets a predicted value of $\hat{y}_i = E(Y| X1 < \mu_{X1})$, and everyone on the higher end of X1 gets a predicted value of $\hat{y}_i = E(Y| X1 > \mu_{X1})$. And this would do better than if everyone got $\hat{y}_i = E(Y)$
 
 But with decision trees we usually do not stop after the split of a single variable. We now decided to split on the mean of X1 and so we essentially have 2 dataframes. We could then check if we could split these even further to obtain a lower RSS than the RSS we obtained when we split on X1.
 
@@ -88,8 +88,8 @@ best_split <- function(df, RSS_old){
   
   # Create list of 2*p datasets, for each predictor one datset for above its mean and one below its mean
   splits <- lapply(2:(ncol(df)), function(x){
-    list(dfa = df[df[,(x)] < mean(df[,(x)]), ],
-         dfb = df[df[,(x)] > mean(df[,(x)]), ])
+    list(left = df[df[,(x)] < mean(df[,(x)]), ],
+         right = df[df[,(x)] > mean(df[,(x)]), ])
     })
   
   # Calculate the mean RSS for each of those p splits. so mean over RSS_a RSS_b
@@ -108,21 +108,60 @@ best_split <- function(df, RSS_old){
   best_var <- which(meanRSS == min(meanRSS)) #determine which predictor had best split
   
   RSS_bestvar <- RSS[seque[best_var]:(seque[best_var]+1)] #obtain RSS of both datasets that define the best split
-  
   perc_dec <- (1-(RSS_bestvar/RSS_old)) * 100 #Decrease of RSS in percentage for both splits
+  
+  nobs <- sapply(splits[[best_var]], function(x){ #obtain number of observations in splits
+    nrow(x)
+  })
   
   criterium <- paste0("X", best_var, " < ", formatC(mean(df[,(best_var+1)]), 2))
 
-  return(list(splits = splits[[index_RSS_low]], perc_dec = perc_dec, RSS = RSS_bestvar, criterium = criterium)) #return the best split
+  return(list(splits = splits[[best_var]], nobs = nobs, perc_dec = perc_dec, RSS = RSS_bestvar, criterium = criterium)) #return the best split
 }
 
-out <- best_split(df, RSS_old)
-out$criterium
+```
+We can implement this function that creates the best split into the tree algorithm. We just keep splitting each branch until there are N observations left in a specific dataset. This is easier said than done, however. Because the first split creates 2 dataframes, which are again splitted in 4, then in 8 etc... If we did not do recursive coding, it would look like a for loop (or apply family) that goes deeper and deeper with every split, something like this:
+
+
+```{r}
+tree <- list() #empty list
+
+tree[[1]] <- best_split(df, RSS_old) #apply to original df
+
+tree[[2]] <- lapply(tree[[1]]$splits, function(x){ #apply to first splits (2 dfs)
+  best_split(x, as.numeric(tree[[1]]$RSS))
+})
+  
+tree[[3]] <- lapply(tree[[2]], function(x){ #apply to second splits (4 dfs)
+  lapply(x$splits, function(y){
+    best_split(y, as.numeric(x$RSS))
+  })
+})
+
+tree[[4]] <- lapply(tree[[3]], function(x){ #apply to third splits (8 dfs)
+  lapply(x, function(y){
+    lapply(y$splits, function(z){
+      best_split(z, as.numeric(y$RSS))
+    })
+  })
+})
+names(tree) <- sprintf('split%d', 1:length(tree))
+
+View(tree)
 
 ```
 
 
-
+maybe I can try unlisting, so that every split (except split 1), looks like split 2.  This way a single lapply option is possible.
+```{r}
+tt <- unlist(tree[[3]], recursive = F)
+tt2 <- tree[[2]]
+tt3 <- lapply(tree[[4]], function(x){
+  unlist(x, recursive = F)
+})
+  
+```
+does not really work.
 
 
 
