--- a/Logistic Regression/Logistic Regression.Rmd
+++ b/Logistic Regression/Logistic Regression.Rmd
@@ -60,8 +60,8 @@ Its unfortunately not working yet. Still have to figure out why...
 ```{r}
 GradDescBern <- function(Y, X, rate, thresh, maxit){
   
-  b0 <- runif(1) #0.11 #set initial values
-  b1 <- runif(1) #0.29
+  b0 <- runif(1, 0, 1E-4) 
+  b1 <- runif(1, 0, 1E-4)  #0.29
   iter <- 0
   
   S <- exp(b0+b1*X) #for convenience, S is defined as the sigmoid function #basically the inverse probabilities as 1-(1/(1+S)) = S/(1+S)
@@ -92,7 +92,8 @@ GradDescBern <- function(Y, X, rate, thresh, maxit){
   return(c(b0,b1, pred_rate))
 }  
 
-GradDescBern(Y,X,rate=0.0001, 0.60, 100000) #for some reason, it converges on 0.52 instead of 0.69
+GradDescBern(Y,X,rate=0.0001, 0.70, 10000) #for some reason, it converges on 0.52 instead of 0.69
+summary(glm(Y~X, family = "binomial"))
 
 ```
 
